Fixed title and photo size in manage friends on mobile. #21

--- a/styleguide/source/css/oldie.css
+++ b/styleguide/source/css/oldie.css
@@ -2561,7 +2561,7 @@ table table {
     margin-right: 14px;
     overflow: hidden;
     position: relative;
-    width: 90px;
+    width: 87px;
     z-index: 1;
     height: 90px;
     width: 130px; }
