--- a/styleguide/source/css/src/assembler/components/_teasers.scss
+++ b/styleguide/source/css/src/assembler/components/_teasers.scss
@@ -20,7 +20,7 @@
     margin-right: $def-mar;
     overflow: hidden;
     position: relative;
-    width: 90px;
+    width: 87px;
     z-index: 1;
 
     @include breakpoint($tab) {
