--- a/styleguide/source/css/style.css
+++ b/styleguide/source/css/style.css
@@ -2241,7 +2241,7 @@ table table {
     margin-right: 14px;
     overflow: hidden;
     position: relative;
-    width: 90px;
+    width: 87px;
     z-index: 1; }
     .node-teaser .field-type-image:before {
       color: #fff;
